src/types/tests/snapshots/tgbot__types__tests__gift__gift_premium_subscription.snap
---
source: src/types/tests/gift.rs
expression: actual_data
---
{
  "month_count": 1,
  "star_count": 2,
  "user_id": 3
}
