src/types/tests/snapshots/tgbot__types__tests__gift__owned_gift-4.snap
---
source: src/types/tests/gift.rs
expression: "OwnedGift::from(unique.with_transfer_star_count(1).with_can_be_transferred(true).with_is_saved(true).with_next_transfer_date(500).with_owned_gift_id(\"test-id\").with_sender_user(User::new(1,\n\"John\", false)),)"
---
{
  "type": "unique",
  "gift": {
    "backdrop": {
      "colors": {
        "center_color": 1,
        "edge_color": 2,
        "symbol_color": 3,
        "text_color": 4
      },
      "name": "name",
      "rarity_per_mille": 5
    },
    "base_name": "base-name",
    "gift_id": "gift-id",
    "model": {
      "name": "name",
      "rarity_per_mille": 6,
      "sticker": {
        "file_id": "file-id",
        "file_unique_id": "file-unique-id",
        "height": 512,
        "is_animated": false,
        "is_video": false,
        "type": "regular",
        "width": 512
      },
      "rarity": "rare"
    },
    "name": "name",
    "number": 7,
    "symbol": {
      "name": "name",
      "rarity_per_mille": 8,
      "sticker": {
        "file_id": "file-id",
        "file_unique_id": "file-unique-id",
        "height": 512,
        "is_animated": false,
        "is_video": false,
        "type": "regular",
        "width": 512
      }
    }
  },
  "send_date": 9,
  "transfer_star_count": 1,
  "can_be_transferred": true,
  "is_saved": true,
  "next_transfer_date": 500,
  "owned_gift_id": "test-id",
  "sender_user": {
    "first_name": "John",
    "id": 1,
    "is_bot": false
  }
}
