src/types/tests/snapshots/tgbot__types__tests__gift__owned_gift.snap
---
source: src/types/tests/gift.rs
expression: expected_struct
---
{
  "type": "regular",
  "gift": {
    "id": "id",
    "star_count": 100,
    "sticker": {
      "file_id": "file-id",
      "file_unique_id": "file-unique-id",
      "height": 512,
      "is_animated": false,
      "is_video": false,
      "type": "regular",
      "width": 512
    }
  },
  "send_date": 2
}
