src/types/tests/snapshots/tgbot__types__tests__gift__send_gift-2.snap
---
source: src/types/tests/gift.rs
expression: actual_data
---
{
  "chat_id": "@chat",
  "gift_id": "test"
}
