src/types/tests/snapshots/tgbot__types__tests__gift__send_gift-3.snap
---
source: src/types/tests/gift.rs
expression: actual_data
---
{
  "gift_id": "test",
  "user_id": 1
}
